# ollama-rs

./: Cargo.toml
src/: main.rs
src/generation/chat/: mod.rs  request.rs  tools.rs
